# aljamia-exam

./: .gitignore  100_questions_import.csv  CLAUDE.md  Dockerfile  TESTING_GUIDE.html  TESTING_GUIDE.md  fly.toml
api/: 100_questions_import.csv  README.md  auth.py  check_data.py  check_db.py  database.py  gen_data.py  gen_questions.py  locustfile.py  main.py  preflight.py  pyproject.toml  scheduler.py  setup_admin.py  test_grading.py
api/routers/: admin.py  config.py  exam.py  exams.py  questions.py  settings.py  students.py  ws.py
frontend/: README.md  dashboard.html  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: _redirects  manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DecorativeBackground.tsx
frontend/src/hooks/: useAntiCheat.ts  useExamTimer.ts
frontend/src/pages/admin/: AdminLogin.tsx  Dashboard.tsx
frontend/src/pages/admin/tabs/: CentresTab.tsx  ConfigTab.tsx  ExamsTab.tsx  ImportTab.tsx  MonitorTab.tsx  QuestionsTab.tsx  ResultsTab.tsx  SetsTab.tsx  SettingsTab.tsx  StreamsTab.tsx  StudentDetail.tsx
frontend/src/pages/student/: ExamPage.tsx  Results.tsx  StudentLogin.tsx  Submitted.tsx
frontend/src/pages/student/components/: ExamErrorBoundary.tsx  ExamModals.tsx  QuestionCard.tsx  Watermark.tsx  theme.ts
frontend/src/stores/: authStore.ts  examStore.ts
frontend/src/types/: index.ts
